# qtdbus-example

./: CMakeLists.txt
child/: CMakeLists.txt  child.cpp  child.h  main.cpp
parent/: CMakeLists.txt  child.xml  main.cpp  parent.cpp  parent.h
